[Ref] Refactor indirect wrappers to indicate that they are used to propagate changes to the persistence context.
Also remove their useless no-arg constructors.